Choice of words in conceptual-overview.mdx

--- a/src/content/getting-started/conceptual-overview.mdx
+++ b/src/content/getting-started/conceptual-overview.mdx
@@ -79,7 +79,7 @@ contract HelloWorld {
 
 ### Variables
 
-Like Javascript, contracts can have state variables and local variables. **State variables** are variables with values that are permanently stored in contract storage. The values of **local variables**, however, are present only until the function is executing. There are also different types of variables you can use within Solidity, such as `string`, `uint256`, etc. Check out the [Solidity documentation](https://docs.soliditylang.org/en/v0.8.7/) to learn more about the different kinds of variables and types.
+Like Javascript, contracts can have state variables and local variables. **State variables** are variables with values that are permanently stored in contract storage. The values of **local variables**, however, are present only while the function is executing. There are also different types of variables you can use within Solidity, such as `string`, `uint256`, etc. Check out the [Solidity documentation](https://docs.soliditylang.org/en/v0.8.7/) to learn more about the different kinds of variables and types.
 
 _Visibility modifiers_ are used to define the level of access to these variables. Here are some examples of state variables with different visibility modifiers:
 
